--- a/weos-angular/projects/01-data-binding/src/app/event-binding/event-binding.component.html
+++ b/weos-angular/projects/01-data-binding/src/app/event-binding/event-binding.component.html
@@ -1,4 +1,4 @@
-<h3 [ngClass]="{'text-primary': num <= 20}">{{ num }}</h3>
+<h3 [ngClass]="myClassObj">{{ num }}</h3>
 
 <h3 [class.text-warning]="num > 40 && num <= 60">{{ num }}</h3>
 
