--- a/weos-angular/projects/01-data-binding/src/app/two-way-binding/two-way-binding.component.html
+++ b/weos-angular/projects/01-data-binding/src/app/two-way-binding/two-way-binding.component.html
@@ -1,7 +1,7 @@
 
 <div class="row justify-content-center g-3 align-items-center">
    <div class="col-5">
-      <h3 class="fw-semibold text-danger ">Two Way DataBinding</h3>
+      <h3 class="fw-semibold text-center text-danger ">Two Way DataBinding</h3>
       <div class="mb-3">
          <label for="name"   class="form-label">Name</label>
          <input #name [(ngModel)]="user.name" type="text" id="name" name="name" class="form-control" placeholder="eg. David">
