--- a/weos-angular/projects/02-angular-forms/src/app/template-driven/template-driven.component.html
+++ b/weos-angular/projects/02-angular-forms/src/app/template-driven/template-driven.component.html
@@ -97,8 +97,8 @@
          @for (student of list; track $index) {
             <tr>
                <td>{{ student.name }}</td>
-               <td>{{ student.phone }}</td>
-               <td>{{ student.email }}</td>
+               <td>{{ student.contact.phone }}</td>
+               <td>{{ student.contact.email }}</td>
                <td>{{ student.mark }}</td>
                <td>{{ student.gender }}</td>
                <td>{{ student.birthYear }}</td>
