--- a/employee-web/src/app/pages/departments/department-details/department-details.component.html
+++ b/employee-web/src/app/pages/departments/department-details/department-details.component.html
@@ -1,1 +1,34 @@
-<p>department-details works!</p>
+<!-- Title-->
+<h4 class="d-flex justify-content-between">
+   <span>
+      <i class="bi-building"></i> {{ data().code }} - {{ data().name }}
+   </span>
+
+   <div>
+      <a class="btn btn-outline-info me-2">
+         <i class="bi-person-add"></i> Add Employee
+      </a>
+      <a [routerLink]="['/departments', 'edit']" routerLinkActive="router-link-active" [queryParams]="{code: data().code}" class="btn btn-outline-info">
+         <i class="bi-pencil"></i>
+      </a>
+   </div>
+</h4>
+
+@if (data().description) {
+   <span class="text-warp">
+      {{ data().description}}
+   </span>
+}
+
+<div class="row mt-3">
+   <div class="col-4">
+      <app-card>
+         <app-department-info [data]="data()"></app-department-info>
+      </app-card>
+   </div>
+   <div class="col">
+      <app-card>
+         <app-department-employee></app-department-employee>
+      </app-card>
+   </div>
+</div>
