--- a/employee-web/src/app/pages/departments/departments.component.html
+++ b/employee-web/src/app/pages/departments/departments.component.html
@@ -26,7 +26,7 @@
                   <td>{{  item.hodName }}</td>
                   <td>{{  item.employee }}</td>
                   <td class="text-center">
-                     <a href="#">
+                     <a [routerLink]="['/departments', 'details']" routerLinkActive="router-link-active" [queryParams]="{code: item.code}" >
                         <i class="bi-send"></i>
                      </a>
                   </td>
