add position view but not finish

--- a/employee-web/src/app/pages/departments/departments.component.html
+++ b/employee-web/src/app/pages/departments/departments.component.html
@@ -31,7 +31,8 @@
                      </a>
                   </td>
                </tr>
-   
+            } @empty {
+               <app-no-data domain="Department"></app-no-data>
             }
          </tbody>
       </table>
