--- a/employee-web/src/app/pages/departments/departments.component.html
+++ b/employee-web/src/app/pages/departments/departments.component.html
@@ -6,36 +6,39 @@
 <div class="row ">
 <!-- Result List-->
    <div class="col">
-      <table class="table table-bordered">
-         <thead>
-            <tr>
-               <th>Code</th>
-               <th>Name</th>
-               <th>Head</th>
-               <th>Phone</th>
-               <th>Employees</th>
-               <th></th>
-            </tr>
-         </thead>
-         <tbody>
-            @for (item of list(); track $index) {
+      @if (list().length > 0) {
+         <table class="table table-bordered">
+            <thead>
                <tr>
-                  <td>{{  item.code }}</td>
-                  <td>{{  item.name }}</td>
-                  <td>{{  item.phone }}</td>
-                  <td>{{  item.hodName }}</td>
-                  <td>{{  item.employee }}</td>
-                  <td class="text-center">
-                     <a [routerLink]="['/departments', 'details']" routerLinkActive="router-link-active" [queryParams]="{code: item.code}" >
-                        <i class="bi-send"></i>
-                     </a>
-                  </td>
+                  <th>Code</th>
+                  <th>Name</th>
+                  <th>Head</th>
+                  <th>Phone</th>
+                  <th>Employees</th>
+                  <th></th>
                </tr>
-            } @empty {
-               <app-no-data domain="Department"></app-no-data>
-            }
-         </tbody>
-      </table>
+            </thead>
+            <tbody>
+               @for (item of list(); track $index) {
+                  <tr>
+                     <td>{{  item.code }}</td>
+                     <td>{{  item.name }}</td>
+                     <td>{{  item.phone }}</td>
+                     <td>{{  item.hodName }}</td>
+                     <td>{{  item.employee }}</td>
+                     <td class="text-center">
+                        <a [routerLink]="['/departments', 'details']" routerLinkActive="router-link-active" [queryParams]="{code: item.code}" >
+                           <i class="bi-send"></i>
+                        </a>
+                     </td>
+                  </tr>
+               }
+            </tbody>
+         </table>
+      } @else {
+         <app-no-data domain="Department"></app-no-data>
+      }
+
    </div>
 
 <!-- Search Bar-->
