--- a/employee-web/src/app/pages/positions/position-details/position-info/position-info.component.html
+++ b/employee-web/src/app/pages/positions/position-details/position-info/position-info.component.html
@@ -11,7 +11,7 @@
       <span class="form-control">{{ data().name }}</span>
    </app-form-group>
    <app-form-group label="Basic Salary">
-      <span class="form-control">{{ data().basicSalary }}</span>
+      <span class="form-control">{{ data().basicSalary | number }}</span>
    </app-form-group>
    <app-form-group label="Ot Per Hour">
       <span class="form-control">{{ data().otPerHour }}</span>
