query param binding

--- a/weos-angular/projects/05-routing/src/app/parent-one/parent-one.component.html
+++ b/weos-angular/projects/05-routing/src/app/parent-one/parent-one.component.html
@@ -1,1 +1,3 @@
-<p>parent-one works!</p>
+<p>Name: {{ routeParam }}</p>
+
+<button  (click)="updateParam('hey')" class="btn btn-outline-success">Change Route Param</button>
