--- a/weos-angular/projects/05-routing/src/app/app.component.html
+++ b/weos-angular/projects/05-routing/src/app/app.component.html
@@ -5,7 +5,7 @@
 
     <ul class="navbar-nav me-auto">
       <li class="nav-item">
-        <a routerLink="/parent-one" routerLinkActive="active" class="nav-link">Parent One</a>
+        <a routerLink="/parent-one" [queryParams]="{id: 'Parent One Component'}" routerLinkActive="active" class="nav-link">Parent One</a>
       </li>
       <li class="nav-item">
         <a routerLink="/parent-two" routerLinkActive="active" class="nav-link">Parent Two</a>
